...
    >
      <Tabs.Screen
        name="index"
        options={{
          title: t.tabs.yourVideos,
          tabBarIcon: icon('film-outline'),
          tabBarButtonTestID: 'tab-videos',
          tabBarBadge: sending > 0 ? sending : undefined,
        }}
      />
      <Tabs.Screen
        name="events"
        options={{
...
